      which sometimes caused false test failures.  (Martin Pool)

    * Fix bug in bundle 4 that could cause attempts to write data to wrong
      versionedfile.  (Aaron Bentley)

    * Diffs generated using "diff -p" no longer break the patch parser.
      (Aaron Bentley)

    * get_transport treats an empty possible_transports list the same as a non-
      empty one.  (Aaron Bentley)

  IMPROVEMENTS:

    * ``pull`` and ``merge`` are much faster at installing bundle format 4.
      (Aaron Bentley)

    * ``pull -v`` no longer includes deltas, making it much faster.
      (Aaron Bentley)

  API BREAKS:

   * ``Branch.append_revision`` is removed altogether; please use 
     ``Branch.set_last_revision_info`` instead.  (Martin Pool)

  aPI CHANGES:

    * ``Transport.should_cache`` has been removed.  It was not called in the
      previous release.  (Martin Pool)

bzr 0.90rc1 2007-08-14

  BUGFIXES:

    * ``bzr init`` should connect to the remote location one time only.  We
      have been connecting several times because we forget to pass around the
      Transport object. This modifies ``BzrDir.create_branch_convenience``,
      so that we can give it the Transport we already have.
      (John Arbash Meinel, Vincent Ladeuil, #111702)

    * Get rid of sftp connection cache (get rid of the FTP one too).
      (Vincent Ladeuil, #43731)

    * bzr branch {local|remote} remote don't try to create a working tree
      anymore.
      (Vincent Ladeuil, #112173)

    * All identified multiple connections for a single bzr command have been
      fixed. See bzrlib/tests/commands directory.
      (Vincent Ladeuil)

    * ``bzr rm`` now does not insist on ``--force`` to delete files that
      have been renamed but not otherwise modified.  (Marius Kruger,
      #111664)

    * ``bzr selftest --bench`` no longer emits deprecation warnings
      (Lukáš Lalinský)

    * ``bzr status`` now honours FILE parameters for conflict lists
      (Aaron Bentley, #127606)
